--- a/scrappyMobile/android/app/build.gradle
+++ b/scrappyMobile/android/app/build.gradle
@@ -179,9 +179,10 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-radar')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
-
+    implementation 'io.radar:sdk:2.1.+'
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
