--- a/scrappyMobile/android/settings.gradle
+++ b/scrappyMobile/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'scrappyMobile'
+include ':react-native-radar'
+project(':react-native-radar').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-radar/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
