--- a/scrappyMobile/ios/Podfile
+++ b/scrappyMobile/ios/Podfile
@@ -34,6 +34,8 @@ target 'scrappyMobile' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'react-native-radar', :path => '../node_modules/react-native-radar'
+
   target 'scrappyMobileTests' do
     inherit! :search_paths
     # Pods for testing
