--- a/scrappyMobile/package.json
+++ b/scrappyMobile/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-radar": "^2.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
