--- a/scrappyMobile/package.json
+++ b/scrappyMobile/package.json
@@ -19,7 +19,9 @@
     "react-native-radar": "^2.1.9",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.2",
-    "react-native-screens": "^2.0.0-beta.2"
+    "react-native-screens": "^2.0.0-beta.2",
+    "react-navigation": "^4.1.1",
+    "react-navigation-stack": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
