--- a/scrappyMobile/package.json
+++ b/scrappyMobile/package.json
@@ -20,6 +20,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.2",
     "react-native-screens": "^2.0.0-beta.2",
+    "react-native-snap-carousel": "^3.8.4",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1"
   },
