--- a/scrappyMobile/package.json
+++ b/scrappyMobile/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/viewpager": "^3.3.0",
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-carousel": "^0.12.0",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-radar": "^2.1.9",
     "react-native-reanimated": "^1.7.0",
