--- a/api/package.json
+++ b/api/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jssoup": "0.0.10",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.11",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "puppeteer": "^2.1.1",
+    "python-shell": "^1.0.8",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   }
 }
