--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "localtunnel": "^2.0.0",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.11",
     "nodemon": "^2.0.2"
